Change to Kartik GView

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "naduvko/yii2-sortable-grid-view-widget",
-    "description": "Sortable modification of standard Yii2 GridView widget",
+    "description": "Sortable modification of Kartik Yii2 GridView widget",
     "keywords": ["yii2", "sortable", "gridview", "grid", "widget"],
     "type": "yii2-extension",
     "license": "MIT",
